--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+
+        "boshurik/telegram-bot-bundle": "~2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
