--- a/app/config/services/telegram.yml
+++ b/app/config/services/telegram.yml
@@ -1,12 +1,25 @@
 services:
+    app.telegram.location.handler:
+        class: AppBundle\Telegram\LocationHandler
+        arguments:
+            - "@doctrine_cache.providers.telegram_location_handler_cache"
+
     app.telegram.command.help:
-        class: AppBundle\Telegram\HelpCommand
+        class: AppBundle\Telegram\Command\HelpCommand
         arguments:
             - "@bo_shurik_telegram_bot.command_pool"
         tags:
             - { name: bo_shurik_telegram_bot.command, priority: -512 }
 
     app.telegram.command.hello:
-        class: AppBundle\Telegram\HelloCommand
+        class: AppBundle\Telegram\Command\HelloCommand
+        tags:
+            - { name: bo_shurik_telegram_bot.command }
+
+    app.telegram.command.offices:
+        class: AppBundle\Telegram\Command\OfficesCommand
+        arguments:
+            - "@app.telegram.location.handler"
+            - "@app.office.repository"
         tags:
             - { name: bo_shurik_telegram_bot.command }
