--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,8 @@ imports:
 
     - { resource: services/telegram.yml }
     - { resource: services/office.yml }
+    - { resource: services/order.yml }
+    - { resource: services/mail.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -51,7 +53,9 @@ swiftmailer:
 doctrine_cache:
     providers:
         telegram_location_handler_cache:
-            type: php_file
+            type: file_system
+        telegram_order_handler_cache:
+            type: file_system
 
 bo_shurik_telegram_bot:
     api:
