--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
 BoShurikTelegramBotBundle:
     resource: "@BoShurikTelegramBotBundle/Resources/config/routing.yml"
-    prefix: /_telegram/<some-secret>
+    prefix: "/_telegram/%telegram_bot_api_token%"
