--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,12 +14,19 @@ services:
         bind:
             $from: '%env(APP_EMAIL_FROM)%'
             $to: '%env(APP_EMAIL_TO)%'
+            $telegramBotName: '%env(APP_TELEGRAM_BOT_NAME)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+
+    # controllers are imported separately to make sure services can be injected
+    # as action arguments even if you don't extend any base controller class
+    App\Login\Controller\:
+        resource: '../src/Login/Controller'
+        tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
@@ -28,3 +35,6 @@ services:
     App\Help\Telegram\Command\HelpCommand:
         tags:
             - { name: boshurik_telegram_bot.command, priority: -1024 }
+
+    BoShurik\TelegramBotBundle\Guard\UserLoaderInterface: '@App\Login\Security\UserLoader'
+    BoShurik\TelegramBotBundle\Guard\UserFactoryInterface: '@App\Login\Security\UserFactory'
