--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "boshurik/telegram-bot-bundle": "^4.1",
+        "boshurik/telegram-bot-bundle": "dev-master@dev",
+        "pagerfanta/pagerfanta": "^2.4",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
