--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,7 @@
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     telegram_route_secret: '%env(TELEGRAM_BOT_TOKEN)%'
 
@@ -19,14 +19,12 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Login\Controller\:
-        resource: '../src/Login/Controller'
-        tags: ['controller.service_arguments']
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Tests/'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
@@ -36,5 +34,5 @@ services:
         tags:
             - { name: boshurik_telegram_bot.command, priority: -1024 }
 
-    BoShurik\TelegramBotBundle\Guard\UserLoaderInterface: '@App\Login\Security\UserLoader'
-    BoShurik\TelegramBotBundle\Guard\UserFactoryInterface: '@App\Login\Security\UserFactory'
+    BoShurik\TelegramBotBundle\Authenticator\UserLoaderInterface: '@App\Login\Security\UserLoader'
+    BoShurik\TelegramBotBundle\Authenticator\UserFactoryInterface: '@App\Login\Security\UserFactory'
